--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,6 +36,15 @@
   display: flex;
   flex-direction: column;
   padding: 10px 0px;
+  align-items: center;
+  /* border: 2px solid red; */
+}
+.card-description p,h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.2rem;
+  color: #333;
+  width: 95%;
 }
 
 @media (max-width: 600px) {
